# pre-commit-talk.mm-python.ninja

./: .travis.yml  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md  introducing-pre-commit-com.md  it-benefits-your-python-project.md  thanks.md  using-it-2.md  using-it-3.md  using-it.md  wait-writing-scripts.md  what-are-the-git-hooks.md  why-i-need-it.md
docs/assets/: keyhandler.js
introducing-pre-commit-com/: index.html
it-benefits-your-python-project/: index.html
search/: search_index.json
thanks/: index.html
using-it/: index.html
using-it-2/: index.html
using-it-3/: index.html
wait-writing-scripts/: index.html
what-are-the-git-hooks/: index.html
why-i-need-it/: index.html
