[tool.poetry]
name = "pre-commit-presentation"
version = "0.1.0"
description = ""
authors = ["Michal Mazurek <mazurek@create.ml>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs-material = "^4.4"
pygments = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
